inserindo descricao de estatisticas

--- a/data_science.html
+++ b/data_science.html
@@ -8497,6 +8497,38 @@ Conclusão: A distribuição não parece ser normal (rejeita hipótese nula).
 </tr>
 </tbody>
 </table>
+<h3 id="%F0%9F%93%8A-Descritivo-e-An%C3%A1lise-dos-Resultados">📊 Descritivo e Análise dos Resultados<a class="anchor-link" href="#%F0%9F%93%8A-Descritivo-e-An%C3%A1lise-dos-Resultados">¶</a></h3><h4 id="M%C3%A9dia-e-Mediana">Média e Mediana<a class="anchor-link" href="#M%C3%A9dia-e-Mediana">¶</a></h4><ul>
+<li><strong>Média</strong>: Representa o valor médio das amostras.</li>
+<li><strong>Mediana</strong>: Indica o valor central quando as amostras estão ordenadas.</li>
+<li>Para o <strong>IPCA</strong> e <strong>Óleo Bruto</strong>, a média e a mediana são próximas, sugerindo uma distribuição mais simétrica. No caso da <strong>Energia Armazenada (EAR)</strong>, a proximidade também indica uma tendência central consistente.</li>
+</ul>
+<h4 id="Desvio-Padr%C3%A3o-e-Vari%C3%A2ncia">Desvio Padrão e Variância<a class="anchor-link" href="#Desvio-Padr%C3%A3o-e-Vari%C3%A2ncia">¶</a></h4><ul>
+<li><strong>Desvio Padrão</strong>: Mede a dispersão dos dados em torno da média.</li>
+<li><strong>Variância</strong>: É o quadrado do desvio padrão e expressa a variabilidade dos dados.</li>
+<li>O <strong>IPCA</strong> apresenta baixa variabilidade (desvio padrão de 0.39), enquanto o <strong>Óleo Bruto</strong> possui alta dispersão (desvio padrão de 865.27), refletindo maiores flutuações nos preços de petróleo.</li>
+</ul>
+<h4 id="M%C3%ADnimo-e-M%C3%A1ximo">Mínimo e Máximo<a class="anchor-link" href="#M%C3%ADnimo-e-M%C3%A1ximo">¶</a></h4><ul>
+<li>Indicam os valores extremos dos dados.</li>
+<li>O <strong>IPCA</strong> varia entre -0.68 e 3.02, mostrando a amplitude de variações inflacionárias.</li>
+<li>A <strong>Energia Armazenada</strong> vai de 18.66 a 85.66, refletindo flutuações nos níveis de armazenamento.</li>
+<li>O <strong>Óleo Bruto</strong> apresenta a maior amplitude (de 1121 a 3734), o que destaca sua volatilidade.</li>
+</ul>
+<h4 id="Assimetria">Assimetria<a class="anchor-link" href="#Assimetria">¶</a></h4><ul>
+<li>Mede o grau de distorção da distribuição em relação à simetria.</li>
+<li>O <strong>IPCA</strong> tem assimetria positiva (1.5658), indicando uma cauda longa à direita (mais valores extremos elevados).</li>
+<li>A <strong>EAR</strong> está próxima da simetria (-0.19).</li>
+<li>O <strong>Óleo Bruto</strong> apresenta leve assimetria positiva (0.27), mas não tão marcante.</li>
+</ul>
+<h5 id="Curtose">Curtose<a class="anchor-link" href="#Curtose">¶</a></h5><ul>
+<li>Indica o grau de achatamento da distribuição em relação a uma distribuição normal.</li>
+<li>O <strong>IPCA</strong> apresenta alta curtose (7.1580), sugerindo presença de muitos valores extremos (distribuição leptocúrtica).</li>
+<li>A <strong>EAR</strong> e o <strong>Óleo Bruto</strong> têm curtoses negativas, indicando distribuições mais achatadas que a normal (platicúrticas).</li>
+</ul>
+<h4 id="Teste-de-Normalidade-(Shapiro-Wilk)">Teste de Normalidade (Shapiro-Wilk)<a class="anchor-link" href="#Teste-de-Normalidade-(Shapiro-Wilk)">¶</a></h4><ul>
+<li>Avalia se os dados seguem uma distribuição normal.</li>
+<li>Todos os conjuntos (<strong>IPCA</strong>, <strong>EAR</strong> e <strong>Óleo Bruto</strong>) tiveram <strong>valores-p baixos</strong> (menores que 0.05), levando à rejeição da hipótese de normalidade.</li>
+<li>Isso confirma que as distribuições são <strong>não normais</strong> e podem exigir métodos não paramétricos ou transformações em análises posteriores.</li>
+</ul>
 </div>
 </div>
 </div>
