--- a/data_science.html
+++ b/data_science.html
@@ -7521,7 +7521,7 @@ a.anchor-link {
 <center><img alt="No description has been provided for this image" src="img.jpg" width="200"/></center>
 <h2 id="Estudo-de-S%C3%A9ries-Temporais-(2000-2024)"><center>Estudo de Séries Temporais (2000-2024)</center><a class="anchor-link" href="#Estudo-de-S%C3%A9ries-Temporais-(2000-2024)">¶</a></h2><br/>
 <br/>
-<h3 id="Autores:-Ana-Carolina-Gomes;-Diego-Ribeiro-Porto;-Gabriel-Neri-e-Costa;-Joao-Ribeiro-Aiub;-Luana-Estevam-Bruno-Carvalho"><center>Autores: Ana Carolina Gomes; Diego Ribeiro Porto; Gabriel Neri e Costa; Joao Ribeiro Aiub; Luana Estevam Bruno Carvalho</center><a class="anchor-link" href="#Autores:-Ana-Carolina-Gomes;-Diego-Ribeiro-Porto;-Gabriel-Neri-e-Costa;-Joao-Ribeiro-Aiub;-Luana-Estevam-Bruno-Carvalho">¶</a></h3><br/>
+<h3 id="Autor:-Diego-Ribeiro-Porto-"><center>Autor: Diego Ribeiro Porto </center><a class="anchor-link" href="#Autor:-Diego-Ribeiro-Porto-">¶</a></h3><br/>
 <h3 id="MAIO-DE-2025"><center>MAIO DE 2025</center><a class="anchor-link" href="#MAIO-DE-2025">¶</a></h3><blockquote>
 <center><em>"a econometria pode ser definida como a análise quantitativa dos fenômenos econômicos ocorridos com base no desenvolvimento paralelo da teoria e das observações e com o uso de métodos de inferência adequados."</em></center>
 </blockquote>
